--- a/node/package.json
+++ b/node/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "basic-auth-connect": "^1.0.0",
+    "eval": "^0.1.2",
     "express": "^4.16.2",
     "install": "^0.10.4",
     "nodemon": "^1.15.0",
